Fixed issue with custom scrollbar on helpRequest page being applied to all other pages. Applied the display:hidden rule of the ::webkit-scrollbar class in App.css to the body of all pages, then applied the  custom scrollbar styles to the child container within the helpRequest page.

--- a/src/pages/HelpRequests/Components/Overview.module.css
+++ b/src/pages/HelpRequests/Components/Overview.module.css
@@ -108,23 +108,28 @@
 }
 /* ^^^^^^^^^^^^^^^^^^^^^ */
 /* --------   SCROLL BAR  FOR INDIVIDUAL HELP REQUESTS CONTAINER  */
-
-::-webkit-scrollbar {
+.individualRequestsContainer::-webkit-scrollbar {
   width: 24px;
 }
 
-::-webkit-scrollbar-track {
+.individualRequestsContainer::-webkit-scrollbar-track {
   background-color: #fff;
   border-radius: 30px;
 }
 
-::-webkit-scrollbar-thumb {
+.individualRequestsContainer::-webkit-scrollbar-thumb {
   background-color: #43c0f6;
   width: 16px;
   border-radius: 30px;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.individualRequestsContainer::-webkit-scrollbar-thumb:hover {
   background-color: #0ee1da;
 }
-/* ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
+/* ^^^^^^^^^^^^^^^^^^^^^ */
+
+
+
+
+
+
